--- a/Changes
+++ b/Changes
@@ -1,7 +1,12 @@
-$Header: /cvsroot/Net::EasyTCP/Changes,v 1.33 2003/05/14 20:20:25 mina Exp $
+$Header: /cvsroot/Net::EasyTCP/Changes,v 1.34 2003/05/15 13:06:23 mina Exp $
 
 
 REVISION HISTORY:
+
+0.22
+	- Fixed a bug that prevented versions 0.20 and 0.21 from working correctly when
+	  Crypt::RSA was installed.
+
 
 0.21
 	- Fixed a bug that prevented version 0.20 clients to talk to servers in older versions.
