--- a/Changes
+++ b/Changes
@@ -1,7 +1,20 @@
-$Header: /cvsroot/Net::EasyTCP/Changes,v 1.34 2003/05/15 13:06:23 mina Exp $
+$Header: /cvsroot/Net::EasyTCP/Changes,v 1.35 2003/05/20 01:09:48 mina Exp $
 
 
 REVISION HISTORY:
+
+0.23
+	- Fixed a bug in using Crypt::RSA that completely prevented it from functioning
+	  on some systems.
+	- Fixed random negotiation failure while using Crypt::RSA by moving the compatability
+	  key length of from 338 to 512 bits.  Unfortunately, this means that negotiation
+	  will take longer :(
+	- Implemented two new parameters to be passed to the "new" constructor:
+	  donotcompresswith, and donotencryptwith.  These allow you to selectively disable
+	  the use of certain compression/encryption modules.
+	- Much better+graceful error-handling for all Encryption and Compression modules
+	- Minor internal code cleanups
+
 
 0.22
 	- Fixed a bug that prevented versions 0.20 and 0.21 from working correctly when
