--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
-$Header: /cvsroot/Net::EasyTCP/Changes,v 1.38 2003/08/07 12:16:13 mina Exp $
+$Header: /cvsroot/Net::EasyTCP/Changes,v 1.40 2004/03/16 21:19:43 mina Exp $
 
 
 REVISION HISTORY:
+
+0.26
+	- Minor bugfix that caused a 1-second responsivity lag on the server
+	- Major bugfix that caused data loss when server bombarded client
 
 
 0.25
